# Tactic-Board

./: BasePage.qml  CMakeLists.txt  ChangeBox.qml  DefaultFormation.qml  Footballer.qml  FormationDelegate.qml  FormationModel.qml  LoginBox.qml  Main.qml  MyBackground.qml  MyLogin.qml  README.md  database.cpp  database.h  images.qrc  main.cpp
docs/gifs/: drag_dropgif
